# soundscape-flow

./: .gitignore  .prettierrc  package.json  pnpm-workspace.yaml  tsconfig.json
src/: globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  player.rs
src/app/: layout.tsx  page.tsx
src/components/: ThemeToggle.tsx
src/components/animate-ui/components/: tabs.tsx
src/components/animate-ui/effects/: motion-highlight.tsx
src/components/shared/: ControlSection.tsx  Header.tsx  SoundSelectionSection.tsx
src/components/shared/controls/: ActiveSoundsSection.tsx  MasterControls.tsx  PlayPauseControl.tsx  QuickActionsSection.tsx  SelectedSoundsList.tsx  TimerControls.tsx  VolumeControlSection.tsx
src/components/shared/sounds/: SoundCard.tsx  Sounds.tsx  sound-themes.tsx  soundOptions.tsx
src/components/ui/: button.tsx  card.tsx  tabs.tsx  toggle.tsx
src/context/: SoundContext.tsx
src/data/: sounds.json
src/features/: MasterControls.tsx  SoundSelectionSection.tsx  SoundSelectionTabs.tsx  Timer.tsx
src/features/controls/: ControlSection.tsx  MasterControls.tsx  TimerControls.tsx
src/features/sounds/: SoundCard.tsx  Sounds.tsx  soundOptions.tsx
src/hooks/: useMasterControls.ts  useSoundControls.ts  useTimer.ts
src/lib/: sounds.ts
src/lib/tauri/: commands.ts
src/providers/: SoundProvider.tsx  providers.tsx
src/types/: sounds.types.ts
src/utils/: time.ts
