[package]
name = "soundscape-flow"
version = "0.1.0"
description = "MacOS app to control soundscape flow"
authors = ["Juan Saldana <saldanaj97@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "^2.0.0", features = ["tray-icon"] }
rodio = { version = "0.20.1" }
